--- a/assets/localizations/app_en.arb
+++ b/assets/localizations/app_en.arb
@@ -1,21 +1,21 @@
 {
     "@@locale": "en",
-    "commonCancel": "Cancel",
-    "commonOk": "OK",
-    "errorTitle": "Sorry",
-    "attackTypeMelee": "Melee",
-    "attackTypeRanged": "Ranged",
-    "attributeStr": "Strength",
-    "attributeAgi": "Agility",
-    "attributeInt": "Intelligence",
-    "attributeUniversal": "universal",
-    "roleCarry": "Carry",
-    "roleSupport": "Support",
-    "roleNuker": "Nuker",
-    "roleDisabler": "Disabler",
-    "roleJungler": "Jungler",
-    "roleDurable": "Durable",
-    "roleEscape": "Escape",
-    "rolePusher": "Pusher",
-    "roleInitiator": "Initiator"
+    "common_cancel": "Cancel",
+    "common_ok": "OK",
+    "error_title": "Sorry",
+    "attack_type_melee": "Melee",
+    "attack_type_ranged": "Ranged",
+    "attribute_str": "Strength",
+    "attribute_agi": "Agility",
+    "attribute_int": "Intelligence",
+    "attribute_universal": "universal",
+    "role_carry": "Carry",
+    "role_support": "Support",
+    "role_nuker": "Nuker",
+    "role_disabler": "Disabler",
+    "role_jungler": "Jungler",
+    "role_durable": "Durable",
+    "role_escape": "Escape",
+    "role_pusher": "Pusher",
+    "role_initiator": "Initiator"
 }
